--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -511,6 +511,134 @@ kvm_vcpu结构体见上节
 /*
   * Intel x86架构中创建并初始化VCPU中架构相关部分
   */
+static int vmx_create_vcpu(struct kvm_vcpu *vcpu)
+{
+        struct vcpu_vmx *vmx;
+        unsigned long *msr_bitmap;
+        int i, cpu, err;
+
+        BUILD_BUG_ON(offsetof(struct vcpu_vmx, vcpu) != 0);
+        vmx = to_vmx(vcpu);
+
+        err = -ENOMEM;
+
+        vmx->vpid = allocate_vpid();
+
+        /*
+         * If PML is turned on, failure on enabling PML just results in failure
+         * of creating the vcpu, therefore we can simplify PML logic (by
+         * avoiding dealing with cases, such as enabling PML partially on vcpus
+         * for the guest), etc.
+         */
+        if (enable_pml) {
+                vmx->pml_pg = alloc_page(GFP_KERNEL_ACCOUNT | __GFP_ZERO);
+                if (!vmx->pml_pg)
+                        goto free_vpid;
+        }
+
+        BUILD_BUG_ON(ARRAY_SIZE(vmx_msr_index) != NR_SHARED_MSRS);
+
+        for (i = 0; i < ARRAY_SIZE(vmx_msr_index); ++i) {
+                u32 index = vmx_msr_index[i];
+                u32 data_low, data_high;
+                int j = vmx->nmsrs;
+
+                if (rdmsr_safe(index, &data_low, &data_high) < 0)
+                        continue;
+                if (wrmsr_safe(index, data_low, data_high) < 0)
+                        continue;
+
+                vmx->guest_msrs[j].index = i;
+                vmx->guest_msrs[j].data = 0;
+                switch (index) {
+                case MSR_IA32_TSX_CTRL:
+                        /*
+                         * No need to pass TSX_CTRL_CPUID_CLEAR through, so
+                         * let's avoid changing CPUID bits under the host
+                         * kernel's feet.
+                         */
+                        vmx->guest_msrs[j].mask = ~(u64)TSX_CTRL_CPUID_CLEAR;
+                        break;
+                default:
+                        vmx->guest_msrs[j].mask = -1ull;
+                        break;
+                }
+                ++vmx->nmsrs;
+        }
+
+        err = alloc_loaded_vmcs(&vmx->vmcs01);
+        if (err < 0)
+                goto free_pml;
+
+        msr_bitmap = vmx->vmcs01.msr_bitmap;
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_IA32_TSC, MSR_TYPE_R);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_FS_BASE, MSR_TYPE_RW);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_GS_BASE, MSR_TYPE_RW);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_KERNEL_GS_BASE, MSR_TYPE_RW);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_IA32_SYSENTER_CS, MSR_TYPE_RW);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_IA32_SYSENTER_ESP, MSR_TYPE_RW);
+        vmx_disable_intercept_for_msr(msr_bitmap, MSR_IA32_SYSENTER_EIP, MSR_TYPE_RW);
+        if (kvm_cstate_in_guest(vcpu->kvm)) {
+                vmx_disable_intercept_for_msr(msr_bitmap, MSR_CORE_C1_RES, MSR_TYPE_R);
+                vmx_disable_intercept_for_msr(msr_bitmap, MSR_CORE_C3_RESIDENCY, MSR_TYPE_R);
+                vmx_disable_intercept_for_msr(msr_bitmap, MSR_CORE_C6_RESIDENCY, MSR_TYPE_R);
+                vmx_disable_intercept_for_msr(msr_bitmap, MSR_CORE_C7_RESIDENCY, MSR_TYPE_R);
+        }
+        vmx->msr_bitmap_mode = 0;
+
+        vmx->loaded_vmcs = &vmx->vmcs01;
+        cpu = get_cpu();
+        vmx_vcpu_load(vcpu, cpu);
+        vcpu->cpu = cpu;
+        // 初始化vmcs域, 会调用vmwrite
+        init_vmcs(vmx);
+        vmx_vcpu_put(vcpu);
+        put_cpu();
+        if (cpu_need_virtualize_apic_accesses(vcpu)) {
+                err = alloc_apic_access_page(vcpu->kvm);
+                if (err)
+                        goto free_vmcs;
+        }
+
+        if (enable_ept && !enable_unrestricted_guest) {
+                err = init_rmode_identity_map(vcpu->kvm);
+                if (err)
+                        goto free_vmcs;
+        }
+
+        if (nested)
+                nested_vmx_setup_ctls_msrs(&vmx->nested.msrs,
+                                           vmx_capability.ept);
+        else
+                memset(&vmx->nested.msrs, 0, sizeof(vmx->nested.msrs));
+
+        vmx->nested.posted_intr_nv = -1;
+        vmx->nested.current_vmptr = -1ull;
+
+        vcpu->arch.microcode_version = 0x100000000ULL;
+        vmx->msr_ia32_feature_control_valid_bits = FEAT_CTL_LOCKED;
+
+        /*
+         * Enforce invariant: pi_desc.nv is always either POSTED_INTR_VECTOR
+         * or POSTED_INTR_WAKEUP_VECTOR.
+         */
+        vmx->pi_desc.nv = POSTED_INTR_VECTOR;
+        vmx->pi_desc.sn = 1;
+
+        vmx->ept_pointer = INVALID_PAGE;
+
+        return 0;
+
+free_vmcs:
+        free_loaded_vmcs(vmx->loaded_vmcs);
+free_pml:
+        vmx_destroy_pml_buffer(vmx);
+free_vpid:
+        free_vpid(vmx->vpid);
+        return err;
+}
+
+
 static struct kvm_vcpu *vmx_create_vcpu(struct kvm *kvm, unsigned int id)
 {
     int err;
