--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -382,8 +382,11 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                             vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
                         decache_tsc_multiplier(); 
                     vmx_vcpu_pi_load(); // 加载posted interrupt
-                init_vmcs(vmx); // vmcs的guest-state在vmx_vcpu_reset()
+                init_vmcs(vmx); // 初始化vmcs, 而guest-state在vmx_vcpu_reset()
+                    vmcs_write32();
                     vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
+                    vmx_set_constant_host_state(vmx); // 设置host-state常量
+                        vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址
                 vmx_vcpu_put();
                     vmx_vcpu_pi_put();
                     vmx_prepare_switch_to_host(); // 
