--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -979,4 +979,4 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 4）在5286～5289行中，如果对当前执行的vCPU需要调度，会引用Linux的进程调度子程序进行一次任务调度。
 
-在上面的执行流程中，最重要的执行在 **vcpu\_enter\_guest** 函数中，该函数实现了进入客户机并且执行具体指令的操作。
+在上面的执行流程中，最重要的执行在 **vcpu\_enter\_guest** 函数中，该函数实现了**进入客户机**并且**执行具体指令**的操作。
