--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -5,7 +5,8 @@
 
 - [1. 性能监控的多个版本](#1-性能监控的多个版本)
 - [2. 确定处理器所支持的功能: 0ah](#2-确定处理器所支持的功能-0ah)
-  - [2.1. 简单实验](#21-简单实验)
+  - [2.1. Linux下查看](#21-linux下查看)
+  - [2.2. 简单实验](#22-简单实验)
 - [3. IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器](#3-ia32_pmcx寄存器在各版本中的数量-general-purpose-counter寄存器)
 - [4. IA32_PMCx寄存器的宽度](#4-ia32_pmcx寄存器的宽度)
   - [4.1. IA32_PMCx寄存器full-width值](#41-ia32_pmcx寄存器full-width值)
@@ -54,7 +55,14 @@ CPU:
 
 其中`EAX[15：8]`得到`IA32_PMCx`寄存器的数量，也意味着**IA32\_PERFEVTSELx寄存器的数量**，它们是**配套出现**的。CPUID 0AH leaf的具体信息可以查看Intel64手册中关于CPUID指令的介绍。
 
-## 2.1. 简单实验
+## 2.1. Linux下查看
+
+```
+# dmesg | grep "Performance Events"
+[    0.237477] Performance Events: PEBS fmt3+, 32-deep LBR, Skylake events, full-width counters, Intel PMU driver.
+```
+
+## 2.2. 简单实验
 
 >实验15-1：枚举CPUID 0A leaf信息
 
