--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -86,3 +86,12 @@ else
 而**06H家族**很庞大，从早期的Pentium Pro、PentiumII到今天的Westmere/SandyBridge微架构的i7/i5/i3处理器都属于06H家族。在如此庞大的**06H家族**，要靠它的**DisplayModel**来识别**每一代架构**的处理器。
 
 **05H家族**则属于Pentium处理器。
+
+处理器产品型号/CPUID标识/签名对照表:
+
+![2020-03-19-08-59-11.png](./images/2020-03-19-08-59-11.png)
+
+
+
+详细见Intel手册: `
+Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel`
