--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -91,7 +91,9 @@ else
 
 ![2020-03-19-08-59-11.png](./images/2020-03-19-08-59-11.png)
 
+![2020-03-19-09-00-27.png](./images/2020-03-19-09-00-27.png)
 
+![2020-03-19-09-00-49.png](./images/2020-03-19-09-00-49.png)
 
 详细见Intel手册: `
 Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel`
