--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -70,6 +70,7 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
 所以在发生EPT violation的时候，KVM中会执行`handle_ept_violation`：
 
 ```cpp
+// arch/x86/kvm/vmx/vmx.c
 static int handle_ept_violation(struct kvm_vcpu *vcpu)
 {
         unsigned long exit_qualification;
@@ -112,6 +113,159 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
 
         vcpu->arch.exit_qualification = exit_qualification;
         return kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);
+}
+```
+
+而该函数并没有做具体的工作，只是获取一下发生`VM-exit`的时候的一些**状态信息**如发生此VM-exit的时候正在执行的客户物理地址GPA、退出原因等，然后作为参数继续往下传递，调用`kvm_mmu_page_fault`
+
+```cpp
+// arch/x86/kvm/mmu/mmu.c
+int kvm_mmu_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u64 error_code,
+                       void *insn, int insn_len)
+{
+        int r, emulation_type = EMULTYPE_PF;
+        bool direct = vcpu->arch.mmu->direct_map;
+
+        if (WARN_ON(!VALID_PAGE(vcpu->arch.mmu->root_hpa)))
+                return RET_PF_RETRY;
+
+        r = RET_PF_INVALID;
+        if (unlikely(error_code & PFERR_RSVD_MASK)) {
+                r = handle_mmio_page_fault(vcpu, cr2_or_gpa, direct);
+                if (r == RET_PF_EMULATE)
+                        goto emulate;
+        }
+
+        if (r == RET_PF_INVALID) {
+                r = kvm_mmu_do_page_fault(vcpu, cr2_or_gpa,
+                                          lower_32_bits(error_code), false);
+                WARN_ON(r == RET_PF_INVALID);
+        }
+
+        if (r == RET_PF_RETRY)
+                return 1;
+        if (r < 0)
+                return r;
+
+        /*
+         * Before emulating the instruction, check if the error code
+         * was due to a RO violation while translating the guest page.
+         * This can occur when using nested virtualization with nested
+         * paging in both guests. If true, we simply unprotect the page
+         * and resume the guest.
+         */
+        if (vcpu->arch.mmu->direct_map &&
+            (error_code & PFERR_NESTED_GUEST_PAGE) == PFERR_NESTED_GUEST_PAGE) {
+                kvm_mmu_unprotect_page(vcpu->kvm, gpa_to_gfn(cr2_or_gpa));
+                return 1;
+        }
+
+        /*
+         * vcpu->arch.mmu.page_fault returned RET_PF_EMULATE, but we can still
+         * optimistically try to just unprotect the page and let the processor
+         * re-execute the instruction that caused the page fault.  Do not allow
+         * retrying MMIO emulation, as it's not only pointless but could also
+         * cause us to enter an infinite loop because the processor will keep
+         * faulting on the non-existent MMIO address.  Retrying an instruction
+         * from a nested guest is also pointless and dangerous as we are only
+         * explicitly shadowing L1's page tables, i.e. unprotecting something
+         * for L1 isn't going to magically fix whatever issue cause L2 to fail.
+         */
+        if (!mmio_info_in_cache(vcpu, cr2_or_gpa, direct) && !is_guest_mode(vcpu))
+                emulation_type |= EMULTYPE_ALLOW_RETRY_PF;
+emulate:
+        /*
+         * On AMD platforms, under certain conditions insn_len may be zero on #NPF.
+         * This can happen if a guest gets a page-fault on data access but the HW
+         * table walker is not able to read the instruction page (e.g instruction
+         * page is not present in memory). In those cases we simply restart the
+         * guest, with the exception of AMD Erratum 1096 which is unrecoverable.
+         */
+        if (unlikely(insn && !insn_len)) {
+                if (!kvm_x86_ops->need_emulation_on_page_fault(vcpu))
+                        return 1;
+        }
+
+        return x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn,
+                                       insn_len);
+}
+EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
+```
+
+# MMU初始化
+
+创建vcpu时候创建
+
+`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_setup()` --> `kvm_mmu_setup()` --> `init_kvm_mmu()`:
+
+```cpp
+// arch/x86/kvm/mmu/mmu.c
+static int init_kvm_mmu(struct kvm_vcpu *vcpu)
+{
+    if (mmu_is_nested(vcpu))
+        // 嵌套虚拟化
+        return init_kvm_nested_mmu(vcpu);
+    else if (tdp_enabled) // 是否支持EPT
+        /* 
+        * EPT(Extended page table，Intel x86硬件提供的内存虚拟化技术)相关初始化
+        * 主要是设置一些函数指针，其中比较重要的如缺页异常处理函数
+        */
+        return init_kvm_tdp_mmu(vcpu);
+    else
+        // 影子页表(软件实现内存虚拟化技术)相关初始化
+        return init_kvm_softmmu(vcpu);
+}
+```
+
+在支持EPT情况下, 调用`init_kvm_tdp_mmu`初始化MMU. 
+
+```cpp
+static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
+{
+        struct kvm_mmu *context = vcpu->arch.mmu;
+        union kvm_mmu_role new_role =
+                kvm_calc_tdp_mmu_root_page_role(vcpu, false);
+
+        if (new_role.as_u64 == context->mmu_role.as_u64)
+                return;
+
+        context->mmu_role.as_u64 = new_role.as_u64;
+        context->page_fault = kvm_tdp_page_fault;
+        context->sync_page = nonpaging_sync_page;
+        context->invlpg = nonpaging_invlpg;
+        context->update_pte = nonpaging_update_pte;
+        context->shadow_root_level = kvm_x86_ops->get_tdp_level(vcpu);
+        context->direct_map = true;
+        context->get_guest_pgd = get_cr3;
+        context->get_pdptr = kvm_pdptr_read;
+        context->inject_page_fault = kvm_inject_page_fault;
+
+        if (!is_paging(vcpu)) {
+                context->nx = false;
+                context->gva_to_gpa = nonpaging_gva_to_gpa;
+                context->root_level = 0;
+        } else if (is_long_mode(vcpu)) {
+                context->nx = is_nx(vcpu);
+                context->root_level = is_la57_mode(vcpu) ?
+                                PT64_ROOT_5LEVEL : PT64_ROOT_4LEVEL;
+                reset_rsvds_bits_mask(vcpu, context);
+                context->gva_to_gpa = paging64_gva_to_gpa;
+        } else if (is_pae(vcpu)) {
+                context->nx = is_nx(vcpu);
+                context->root_level = PT32E_ROOT_LEVEL;
+                reset_rsvds_bits_mask(vcpu, context);
+                context->gva_to_gpa = paging64_gva_to_gpa;
+        } else {
+                context->nx = false;
+                context->root_level = PT32_ROOT_LEVEL;
+                reset_rsvds_bits_mask(vcpu, context);
+                context->gva_to_gpa = paging32_gva_to_gpa;
+        }
+
+        update_permission_bitmask(vcpu, context, false);
+        update_pkru_bitmask(vcpu, context, false);
+        update_last_nonleaf_level(vcpu, context);
+        reset_tdp_shadow_zero_bits_mask(vcpu, context);
 }
 ```
 
