--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -735,7 +735,7 @@ free_vcpu:
 
 这里将先调用**kvm\_x86\_ops**中的**put\_vcpu函数**，实现将**vCPU的参数信息**加载入**CPU**中，并且执行**MMU初始化**和**CPU复位操作**。
 
-kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup():
+`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_setup()`:
 
 ```cpp
 int kvm_arch_vcpu_setup(struct kvm_vcpu *vcpu)
@@ -760,22 +760,22 @@ int kvm_arch_vcpu_setup(struct kvm_vcpu *vcpu)
 }
 ```
 
-kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup() --> kvm_mmu_setup() --> init_kvm_mmu():
+`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_setup()` --> `kvm_mmu_setup()` --> `init_kvm_mmu()`:
 
 ```cpp
 static int init_kvm_mmu(struct kvm_vcpu *vcpu)
 {
-    // NPT(Nested page table，AMD x86硬件提供的内存虚拟化技术，相当于Intel中的EPT技术)相关初始化
     if (mmu_is_nested(vcpu))
+        // 嵌套虚拟化
         return init_kvm_nested_mmu(vcpu);
-    /* 
-     * EPT(Extended page table，Intel x86硬件提供的内存虚拟化技术)相关初始化
-     * 主要是设置一些函数指针，其中比较重要的如缺页异常处理函数
-     */
     else if (tdp_enabled)
+        /* 
+        * EPT(Extended page table，Intel x86硬件提供的内存虚拟化技术)相关初始化
+        * 主要是设置一些函数指针，其中比较重要的如缺页异常处理函数
+        */
         return init_kvm_tdp_mmu(vcpu);
-    // 影子页表(软件实现内存虚拟化技术)相关初始化
     else
+        // 影子页表(软件实现内存虚拟化技术)相关初始化
         return init_kvm_softmmu(vcpu);
 }
 ```
