--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -6,8 +6,8 @@
 - [1. KVM结构体: 一个虚拟机](#1-kvm结构体-一个虚拟机)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
   - [2.1. kvm_run结构体](#21-kvm_run结构体)
-  - [2.2. kvm_vcpu_arch](#22-kvm_vcpu_arch)
-- [3. 结构体之间的关系](#3-结构体之间的关系)
+  - [2.2. kvm_vcpu_arch结构体](#22-kvm_vcpu_arch结构体)
+- [3. kvm, kvm_vcpu, vcpu_vmx和loaded_vmcs之间的关系](#3-kvm-kvm_vcpu-vcpu_vmx和loaded_vmcs之间的关系)
 - [4. struct vmcs_host_state: VMEXIT时加载的host状态](#4-struct-vmcs_host_state-vmexit时加载的host状态)
 - [5. kvm_x86_ops结构体](#5-kvm_x86_ops结构体)
 - [6. KVM API中重要的结构体](#6-kvm-api中重要的结构体)
@@ -236,7 +236,7 @@ vCPU 的**运行时参数**，即运行时的状态
 
 存储有 KVM **虚拟机**的**运行时参数**，如**定时器**、**中断**、**内存槽**等方面的信息。
 
-另外，kvm\_cpu中还包含了执行**iomem**所需要的数据结构，用于处理**iomem方面**的请求。
+另外，kvm\_vcpu中还包含了执行**iomem**所需要的数据结构，用于处理**iomem方面**的请求。
 
 ## 2.1. kvm_run结构体
 
@@ -386,7 +386,7 @@ struct kvm_run {
 
 中断使能标识，如果使用了APIC，则无效
 
-## 2.2. kvm_vcpu_arch
+## 2.2. kvm_vcpu_arch结构体
 
 当前VCPU虚拟的**架构信息**.
 
@@ -401,7 +401,7 @@ struct kvm_vcpu_arch {
     unsigned long regs[NR_VCPU_REGS];
     u32 regs_avail;
     u32 regs_dirty;
-//类似这些寄存器就是就是用来缓存真正的CPU值的
+    //类似这些寄存器就是就是用来缓存真正的CPU值的
     unsigned long cr0;
     unsigned long cr0_guest_owned_bits;
     unsigned long cr2;
@@ -427,7 +427,8 @@ struct kvm_vcpu_arch {
      * the paging mode of the l1 guest. This context is always used to
      * handle faults.
      */
-    struct kvm_mmu mmu; //内存管理，更多的是附带了直接操作函数
+    //内存管理，更多的是附带了直接操作函数
+    struct kvm_mmu mmu; 
  
     /*
      * Paging state of an L2 guest (used for nested npt)
@@ -592,7 +593,7 @@ struct kvm_vcpu_arch {
 };
 ```
 
-# 3. 结构体之间的关系
+# 3. kvm, kvm_vcpu, vcpu_vmx和loaded_vmcs之间的关系
 
 先看下相关结构体的相关部分
 
