--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -729,6 +729,12 @@ free_vcpu:
 }
 ```
 
+`init_vmcs(vmx);`中会初始化vmcs, 其中会设置发生vmexit时的vmm入口地址.
+
+```cpp
+vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址
+```
+
 #### 6.3.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
