--- a/Virtualization/KVM/4. 内存虚拟化/1.  基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1.  基本原理.md
@@ -8,6 +8,7 @@
 - [3. 影子页表](#3-影子页表)
   - [3.1. 影子页表异常处理机制](#31-影子页表异常处理机制)
 - [4. EPT页表](#4-ept页表)
+- [相关概念](#相关概念)
 
 <!-- /code_chunk_output -->
 
@@ -90,3 +91,15 @@ EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机
 对于 **EPT 缺页异常**，KVM 首先根据**引起异常的客户机物理地址**，映射到**对应的宿主机虚拟地址！！！**，然后**为此虚拟地址分配新的物理页**，最后 **KVM 再更新 EPT 页表**，建立起引起**异常的客户机物理地址**到**宿主机物理地址**之间的映射。对 **EPT 写权限**引起的异常，KVM 则通过**更新相应的 EPT 页表**来解决。
 
 由此可以看出，**EPT 页表**相对于前述的影子页表，其实现方式大大简化。而且，由于**客户机内部的缺页异常**也**不会致使客户机退出**，因此**提高了客户机运行的性能**。此外，KVM 只需为**每个客户机**维护**一套 EPT 页表**，也大大**减少了内存的额外开销**。
+
+# 相关概念
+
+* GVA - Guest Virtual Address，虚拟机的虚拟地址
+* GPA - Guest Physical Address，虚拟机的物理地址
+* GFN - Guest Frame Number，虚拟机的页框号
+* HVA - Host Virtual Address，宿主机虚拟地址，也就是对应Qemu中申请的地址
+* HPA - Host Physical Address，宿主机物理地址
+* HFN - Host Frame Number，宿主机的页框号 
+* PFN - host page frame number, 宿主页框号
+* PTE - page table entry，通用来指代页结构项
+* tdp - two dimentional paging（供应商中立术语，可以是NPT和EPT）
