--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -71,3 +71,84 @@ struct kvm_memory_slot {
 ```
 
 至于`kvm_userspace_memory_region`可以看qemu部分
+
+# struct kvm_mmu 结构体: 
+
+## 与kvm_vcpu, kvm_vcpu_arch之间的关系
+
+![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
+
+从上图可以看到，`struct kvm_mmu`是`struct kvm_vcpu_arch`的一个字段。
+
+```cpp
+/*
+ * x86 supports 4 paging modes (5-level 64-bit, 4-level 64-bit, 3-level 32-bit,
+ * and 2-level 32-bit).  The kvm_mmu structure abstracts the details of the
+ * current mmu mode.
+ */
+struct kvm_mmu {
+        unsigned long (*get_guest_pgd)(struct kvm_vcpu *vcpu);
+        u64 (*get_pdptr)(struct kvm_vcpu *vcpu, int index);
+        int (*page_fault)(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u32 err,
+                          bool prefault);
+        void (*inject_page_fault)(struct kvm_vcpu *vcpu,
+                                  struct x86_exception *fault);
+        gpa_t (*gva_to_gpa)(struct kvm_vcpu *vcpu, gpa_t gva_or_gpa,
+                            u32 access, struct x86_exception *exception);
+        gpa_t (*translate_gpa)(struct kvm_vcpu *vcpu, gpa_t gpa, u32 access,
+                               struct x86_exception *exception);
+        int (*sync_page)(struct kvm_vcpu *vcpu,
+                         struct kvm_mmu_page *sp);
+        void (*invlpg)(struct kvm_vcpu *vcpu, gva_t gva, hpa_t root_hpa);
+        void (*update_pte)(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
+                           u64 *spte, const void *pte);
+        hpa_t root_hpa;
+        gpa_t root_cr3;
+        union kvm_mmu_role mmu_role;
+        u8 root_level;
+        u8 shadow_root_level;
+        u8 ept_ad;
+        bool direct_map;
+        struct kvm_mmu_root_info prev_roots[KVM_MMU_NUM_PREV_ROOTS];
+
+        /*
+         * Bitmap; bit set = permission fault
+         * Byte index: page fault error code [4:1]
+         * Bit index: pte permissions in ACC_* format
+         */
+        u8 permissions[16];
+
+        /*
+        * The pkru_mask indicates if protection key checks are needed.  It
+        * consists of 16 domains indexed by page fault error code bits [4:1],
+        * with PFEC.RSVD replaced by ACC_USER_MASK from the page tables.
+        * Each domain has 2 bits which are ANDed with AD and WD from PKRU.
+        */
+        u32 pkru_mask;
+
+        u64 *pae_root;
+        u64 *lm_root;
+
+        /*
+         * check zero bits on shadow page table entries, these
+         * bits include not only hardware reserved bits but also
+         * the bits spte never used.
+         */
+        struct rsvd_bits_validate shadow_zero_check;
+
+        struct rsvd_bits_validate guest_rsvd_check;
+
+        /* Can have large pages at levels 2..last_nonleaf_level-1. */
+        u8 last_nonleaf_level;
+
+        bool nx;
+
+        u64 pdptrs[4]; /* pae */
+};
+
+struct kvm_tlb_range {
+        u64 start_gfn;
+        u64 pages;
+};
+```
+
