--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -84,6 +84,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
                 return;
 
         context->mmu_role.as_u64 = new_role.as_u64;
+        // page_fault 函数被初始化为 kvm_tdp_page_fault
         context->page_fault = kvm_tdp_page_fault;
         context->sync_page = nonpaging_sync_page;
         context->invlpg = nonpaging_invlpg;
@@ -146,9 +147,7 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
 };
 ```
 
-
-
-所以在发生EPT violation的时候，KVM中会执行`handle_ept_violation`：
+所以在发生EPT violation的时候，根据`EXIT_REASON_EPT_VIOLATION`走到handle_ept_violation函数, KVM中会执行`handle_ept_violation`：
 
 ```cpp
 // arch/x86/kvm/vmx/vmx.c
@@ -170,7 +169,7 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
                         enable_vnmi &&
                         (exit_qualification & INTR_INFO_UNBLOCK_NMI))
                 vmcs_set_bits(GUEST_INTERRUPTIBILITY_INFO, GUEST_INTR_STATE_NMI);
-
+        // 虚拟机物理地址, GPA
         gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);
         trace_kvm_page_fault(gpa, exit_qualification);
 
@@ -197,7 +196,7 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
 }
 ```
 
-而该函数并没有做具体的工作，只是获取一下发生`VM-exit`的时候的一些**状态信息**如发生此VM-exit的时候正在执行的客户物理地址GPA、退出原因等，然后作为参数继续往下传递，调用`kvm_mmu_page_fault`
+而该函数并没有做具体的工作，只是获取一下发生`VM-exit`的时候的一些**状态信息**如发生此VM-exit的时候正在执行的**客户物理地址GPA**、**退出原因**等，然后作为参数继续往下传递，调用`kvm_mmu_page_fault`
 
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
