--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -37,6 +37,17 @@ kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slo
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
 ```cpp
+/* KVM Hugepage definitions for x86 */
+enum {
+        PT_PAGE_TABLE_LEVEL   = 1,
+        PT_DIRECTORY_LEVEL    = 2,
+        PT_PDPE_LEVEL         = 3,
+        /* set max level to the biggest one */
+        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
+};
+// 这里是3
+#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
+                                 PT_PAGE_TABLE_LEVEL + 1)
 struct kvm_rmap_head {
         unsigned long val;
 };
@@ -46,7 +57,9 @@ struct kvm_lpage_info {
 };
 
 struct kvm_arch_memory_slot {
+        // 反向映射结构（reverse map）
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
+        // Large page结构（如2MB、1GB大小页面）
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
         unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
 };
@@ -65,7 +78,9 @@ struct kvm_memory_slot {
          * 而qemu是用户态程序, 所以通常使用root-module下的用户地址空间.
          */
         unsigned long userspace_addr;
+        // 标志位
         u32 flags;
+        // slot的id
         short id;
 };
 ```
