--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -26,11 +26,13 @@
 ```cpp
 // include/linux/kvm_host.h
 struct kvm {
-	// 保护mmu的spinlock
+	// 保护mmu的spinlock, mmu范围最大的锁
 	spinlock_t mmu_lock;
+    // 内存槽操作锁
 	struct mutex slots_lock;
 	// 指向qemu用户态进程的mm_struct
 	struct mm_struct *mm; /* userspace tied to this vm */
+    // 该kvm所有的memslot
 	struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
 	struct srcu_struct srcu;
 	struct srcu_struct irq_srcu;
