--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -1,12 +1,21 @@
 
 
-# 1. kvm_memslots: 虚拟机所有slot信息
+# 1. kvm中与内存有关的成员
 
 ```cpp
 // include/linux/kvm_host.h
 struct kvm {
+        // 保护mmu的spinlock, mmu范围最大的锁
+	spinlock_t mmu_lock;
+        // 内存槽操作锁
+	struct mutex slots_lock;
+	// 指向qemu用户态进程的mm_struct
+	struct mm_struct *mm; /* userspace tied to this vm */
+        // 该kvm所有的memslot
         struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
 ```
+
+# 2. kvm_memslots: 虚拟机所有slot信息
 
 一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
 
@@ -32,7 +41,9 @@ kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slo
 
 获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, 下面有具体代码.
 
-# 2. kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系
+kvm->memslots结构在创建虚拟机时被创建. `kvm_create_vm`
+
+# 3. kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
@@ -87,9 +98,9 @@ struct kvm_memory_slot {
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
-# struct kvm_mmu 结构体: 
+# 4. struct kvm_mmu 结构体:
 
-## 与kvm_vcpu, kvm_vcpu_arch之间的关系
+## 4.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系
 
 ![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
 
