--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -43,7 +43,7 @@ kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slo
 
 kvm->memslots结构在创建虚拟机时被创建. `kvm_create_vm`
 
-# 3. kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系
+# 3. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
