--- a/Virtualization/KVM/4. 内存虚拟化/5. 内存槽注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. 内存槽注册.md
@@ -16,7 +16,7 @@
 
 kvm虚拟机实际运行于`qemu-kvm`的**进程上下文**中，因此，需要建立**虚拟机的物理内存空间**(GPA)与`qemu-kvm`**进程的虚拟地址空间**(HVA)的映射关系。
 
-**虚拟机的物理地址空间**实际也是**不连续**的，分成**不同的内存区域**(slot)，因为物理地址空间中通常还包括**BIOS**、**MMIO**、**显存**、**ISA保留**等部分。
+**虚拟机的物理地址空间**实际也是**不连续**的，分成**不同的内存区域**(slot)，因为物理地址空间中通常还包括**BIOS**、**MMIO**、**显存**、**ISA保留**等部分, 也就是说**每一段内存区间**都必须有**独立的作用**。
 
 qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设置内存**。主要建立**guest物理地址空间**中的内存区域与**qemu-kvm虚拟地址空间中的内存区域**的映射，从而建立其从**GVA到HVA的对应关系**，该**对应关系**主要通过`kvm_mem_slot`结构体保存，所以实质为设置kvm_mem_slot结构体。
 
@@ -93,6 +93,13 @@ int kvm_vm_ioctl_set_memory_region(struct kvm *kvm,
 函数检查下slot编号如果超额，那没办法，无法添加，否则调用`kvm_set_memory_region()`函数。而该函数没做别的，最终调用 `__kvm_set_memory_region()`
 
 ## 3.2. __kvm_set_memory_region()
+
+主要做了如下几件事情：
+- 数据检查
+- 调用id_to_memslot来获得kvm->memslots中对应的memslot指针
+- 设置memslot的base_gfn、npages等域
+- 处理和已经存在的memslots的重叠
+- 调用install_new_memslots装载新的memslot
 
 ```cpp
 /*
