--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -447,7 +447,7 @@ struct kvm_vcpu_arch {
      * gva_to_gpa translations.
      */
     struct kvm_mmu *walk_mmu;
- 
+    // 反向映射
     struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
     struct kvm_mmu_memory_cache mmu_page_cache;
     struct kvm_mmu_memory_cache mmu_page_header_cache;
