--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -98,13 +98,88 @@ struct kvm_memory_slot {
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
-# 4. struct kvm_mmu 结构体:
+# 4. kvm_mmu 结构体:
 
 ## 4.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系
 
 ![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
 
 从上图可以看到，`struct kvm_mmu`是`struct kvm_vcpu_arch`的一个字段。
+
+vcpu->arch中与MMU相关的结构：
+
+```cpp
+struct kvm_vcpu_arch {
+    ......
+    /*
+     * Paging state of the vcpu
+     *
+     * If the vcpu runs in guest mode with two level paging this still saves
+     * the paging mode of the l1 guest. This context is always used to
+     * handle faults.
+     */
+    //内存管理，更多的是附带了直接操作函数
+    struct kvm_mmu mmu; 
+ 
+    /*
+     * Paging state of an L2 guest (used for nested npt)
+     *
+     * This context will save all necessary information to walk page tables
+     * of the an L2 guest. This context is only initialized for page table
+     * walking and not for faulting since we never handle l2 page faults on
+     * the host.
+     */
+    struct kvm_mmu nested_mmu;
+ 
+    /*
+     * Pointer to the mmu context currently used for
+     * gva_to_gpa translations.
+     */
+    struct kvm_mmu *walk_mmu;
+ 
+    struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
+    struct kvm_mmu_memory_cache mmu_page_cache;
+    struct kvm_mmu_memory_cache mmu_page_header_cache;
+    ......
+```
+
+注释已经很清楚了，我就不做过多的解释了，说一下三个cache：
+- `mmu_pte_list_desc_cache`：用来分配`struct pte_list_desc`结构，该结构主要用于**反向映射**，参考`rmap_ad`函数，**每个rmapp**指向的就是**一个**`pte_list`。后面介绍反向映射的时候会详细介绍。
+- `mmu_page_cache`：用来**分配spt页结构**，spt页结构是存储`spt paging structure`的页，对应`kvm_mmu_page.spt`
+- `mmu_page_header_cache`：用来分配`struct kvm_mmu_page`结构，从该cache分配的页面可能会调用**kmem_cache机制**来分配
+
+这三个cache使用的是`kvm_mmu_memory_cache`结构，该结构是KVM定义的cache结构，进一步优化了MMU分配的效率。有**两个对应的kmem_cache结构**：
+
+```cpp
+static struct kmem_cache *pte_list_desc_cache;
+static struct kmem_cache *mmu_page_header_cache;
+```
+
+他们分别对应`mmu_pte_list_desc_cache`和`mmu_page_header_cache`，也就是说如果这**两个cache**中缓存的**object数目不够**，则会从上述对应的`kmem_cache`中获取，对应的代码可以参考函数`mmu_topup_memory_cache`；
+
+```cpp
+static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
+                                  struct kmem_cache *base_cache, int min)
+{
+        void *obj;
+
+        if (cache->nobjs >= min)
+                return 0;
+        while (cache->nobjs < ARRAY_SIZE(cache->objects)) {
+                obj = kmem_cache_zalloc(base_cache, GFP_KERNEL_ACCOUNT);
+                if (!obj)
+                        return cache->nobjs >= min ? 0 : -ENOMEM;
+                cache->objects[cache->nobjs++] = obj;
+        }
+        return 0;
+}
+```
+
+而`mmu_page_cache中的object数目不够时，则调用mmu_topup_memory_cache_page函数，其中直接调用了__get_free_page函数来获得页面。在一些初始化函数中，需要初始化这些cache以便加速运行时的分配，初始化函数为mmu_topup_memory_caches，该初始化过程在mmu page fault处理函数（如tdp_page_fault）、MMU初始化函数（kvm_mmu_load）和写SPT的pte函数（kvm_mmu_pte_write）中被调用。
+
+
+
+## kvm_mmu 定义
 
 ```cpp
 /*
@@ -113,7 +188,9 @@ struct kvm_memory_slot {
  * current mmu mode.
  */
 struct kvm_mmu {
+        // 所属的vcpu
         unsigned long (*get_guest_pgd)(struct kvm_vcpu *vcpu);
+        // 
         u64 (*get_pdptr)(struct kvm_vcpu *vcpu, int index);
         int (*page_fault)(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u32 err,
                           bool prefault);
@@ -172,9 +249,5 @@ struct kvm_mmu {
         u64 pdptrs[4]; /* pae */
 };
 
-struct kvm_tlb_range {
-        u64 start_gfn;
-        u64 pages;
-};
 ```
 
