--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -175,7 +175,7 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 }
 ```
 
-而`mmu_page_cache中的object数目不够时，则调用mmu_topup_memory_cache_page函数，其中直接调用了__get_free_page函数来获得页面。在一些初始化函数中，需要初始化这些cache以便加速运行时的分配，初始化函数为mmu_topup_memory_caches，该初始化过程在mmu page fault处理函数（如tdp_page_fault）、MMU初始化函数（kvm_mmu_load）和写SPT的pte函数（kvm_mmu_pte_write）中被调用。
+而`mmu_page_cache`中的object数目不够时，则调用`mmu_topup_memory_cache_page`函数，其中直接调用了`__get_free_page`函数来获得页面。在一些**初始化函数**中，需要**初始化这些cache**以便**加速运行时的分配**，初始化函数为`mmu_topup_memory_caches`，该初始化过程在**mmu page fault处理函数**（如`tdp_page_fault`）、**MMU初始化函数**（`kvm_mmu_load`）和**写SPT的pte函数**（`kvm_mmu_pte_write`）中被调用。
 
 
 
