--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -46,7 +46,7 @@
 
 PDE的12-51位指向一个4K物理页面，最后根据客户物理地址的最低12位作为偏移，定位到具体的物理地址。
 
-# MMU初始化: vcpu创建时
+# MMU初始化
 
 KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个VCPU独有的**（但是有一些是共享的内容，后面会说到）。
 
@@ -54,7 +54,11 @@ KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个
 kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  ├─ kvm_vm_ioctl_create_vcpu()       // 创建vcpu的ioctl
  |   ├─ kvm_arch_vcpu_create()   // 初始化kvm_vcpu_arch
- |   |   ├─ kvm_mmu_create(vcpu);   // 创建mmu
+ |   |   └─ kvm_mmu_create(vcpu);   // 创建mmu
+ |   |       ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 创建mmu
+ |   |       └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 创建mmu
+
+
  ├─ module_call_init(MODULE_INIT_QOM)        // 初始化 QOM
  ├─ runstate_init()
  ├─ init_clocks()                            // 初始化时钟源
@@ -70,6 +74,7 @@ kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  |       ├─ kvm_arch_init()
 ```
 
+## MMU
 MMU的创建在`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_mmu_create()`
 
 ```cpp
@@ -107,6 +112,34 @@ int kvm_mmu_create(struct kvm_vcpu *vcpu)
  fail_allocate_root:
         free_mmu_pages(&vcpu->arch.guest_mmu);
         return ret;
+}
+
+static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
+{
+        struct page *page;
+        int i;
+
+        /*
+         * When using PAE paging, the four PDPTEs are treated as 'root' pages,
+         * while the PDP table is a per-vCPU construct that's allocated at MMU
+         * creation.  When emulating 32-bit mode, cr3 is only 32 bits even on
+         * x86_64.  Therefore we need to allocate the PDP table in the first
+         * 4GB of memory, which happens to fit the DMA32 zone.  Except for
+         * SVM's 32-bit NPT support, TDP paging doesn't use PAE paging and can
+         * skip allocating the PDP table.
+         */
+        if (tdp_enabled && kvm_x86_ops->get_tdp_level(vcpu) > PT32E_ROOT_LEVEL)
+                return 0;
+
+        page = alloc_page(GFP_KERNEL_ACCOUNT | __GFP_DMA32);
+        if (!page)
+                return -ENOMEM;
+        // 后面会用到
+        mmu->pae_root = page_address(page);
+        for (i = 0; i < 4; ++i)
+                mmu->pae_root[i] = INVALID_PAGE;
+
+        return 0;
 }
 ```
 
