--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -411,6 +411,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         kvm_create_vcpu_debugfs() // 创建vcpu的debugfs
         kvm_get_kvm() // 增加kvm的引用计数
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
+        atomic_inc(&kvm->online_vcpus); //增加
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
             vcpu_load();
             kvm_write_tsc();
