--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -74,7 +74,8 @@ kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  |       ├─ kvm_arch_init()
 ```
 
-## MMU
+## MMU的创建
+
 MMU的创建在`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_mmu_create()`
 
 ```cpp
@@ -147,7 +148,7 @@ static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
 
 
 
-
+## MMU的初始化
 
 `kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_setup()` --> `kvm_mmu_setup()` --> `init_kvm_mmu()`:
 
