--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -403,7 +403,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                 kvm_make_request(KVM_REQ_EVENT, vcpu);
                 kvmclock_reset(vcpu);
                 kvm_x86_ops->vcpu_reset(vcpu, init_event);
-            kvm_init_mmu(vcpu, false);
+            kvm_init_mmu(vcpu, false); // 初始化mmu
             vcpu_put(vcpu);
                 kvm_arch_vcpu_put(vcpu);
                 preempt_notifier_unregister(&vcpu->preempt_notifier);
@@ -411,7 +411,8 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         kvm_create_vcpu_debugfs() // 创建vcpu的debugfs
         kvm_get_kvm() // 增加kvm的引用计数
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
-        atomic_inc(&kvm->online_vcpus); //增加
+        kvm->vcpus[vcpu->vcpu_idx]=vcpu; //添加到虚拟机的vcpus数组
+        atomic_inc(&kvm->online_vcpus); //增加kvm->online_vcpus数目
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
             vcpu_load();
             kvm_write_tsc();
