--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -54,24 +54,13 @@ KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个
 kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  ├─ kvm_vm_ioctl_create_vcpu()       // 创建vcpu的ioctl
  |   ├─ kvm_arch_vcpu_create()   // 初始化kvm_vcpu_arch
- |   |   └─ kvm_mmu_create(vcpu);   // 创建mmu
- |   |       ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 创建mmu
- |   |       └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 创建mmu
+ |   |   |─ kvm_mmu_create(vcpu);   // 创建mmu
+ |   |   |   ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 创建mmu
+ |   |   |   └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 创建mmu
+ |   |   |─ kvm_init_mmu(vcpu, false);   // 初始化mmu
+ |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 
 
 
- ├─ module_call_init(MODULE_INIT_QOM)        // 初始化 QOM
- ├─ runstate_init()
- ├─ init_clocks()                            // 初始化时钟源
- ├─ module_call_init(MODULE_INIT_MACHINE)
- ├─ switch(popt->index) case QEMU_OPTION_XXX // 解析 QEMU 参数
- ├─ socket_init()
- ├─ os_daemonize()
- ├─ configure_accelerator()                  // 启用 KVM 加速支持
- |   └─ kvm_init()                           // 【1】创建 KVM 虚拟机并获取对应的 fd
- |       ├─ kvm_ioctl(KVM_GET_API_VERSION)   // 检查 KVM API 版本
- |       ├─ kvm_ioctl(KVM_CREATE_VM)         // 创建虚拟机，并获取 vmfd
- |       ├─ kvm_check_extension()            // 与kvm交互, 检查特性支持
- |       ├─ kvm_arch_init()
 ```
 
 ## MMU的创建
@@ -154,7 +143,7 @@ static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
 
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
-static int init_kvm_mmu(struct kvm_vcpu *vcpu)
+static int init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 {
     if (mmu_is_nested(vcpu))
         // 嵌套虚拟化
