--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -157,6 +157,7 @@ static __init int hardware_setup(void)
         kvm_configure_mmu(enable_ept, ept_lpage_level);
         ......
 }
+
 void kvm_configure_mmu(bool enable_tdp, int tdp_page_level)
 {
         tdp_enabled = enable_tdp;
@@ -178,13 +179,13 @@ void kvm_configure_mmu(bool enable_tdp, int tdp_page_level)
 EXPORT_SYMBOL_GPL(kvm_configure_mmu);
 ```
 
-## MMU的初始化
+## MMU的初始化: 主要是回调函数初始化
 
-`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_setup()` --> `kvm_mmu_setup()` --> `init_kvm_mmu()`:
+`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_init_mmu()`:
 
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
-static int init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
+static int kvm_init_mmu(struct kvm_vcpu *vcpu)
 {
     if (mmu_is_nested(vcpu))
         // 嵌套虚拟化
@@ -401,6 +402,7 @@ emulate:
 }
 EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
 ```
+
 
 
 # 参考
