--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -103,3 +103,4 @@ EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机
 * PFN - host page frame number, 宿主页框号
 * PTE - page table entry，通用来指代页结构项
 * tdp - two dimentional paging（供应商中立术语，二维分页, 可以是NPT和EPT）
+* spte - shadow page table entry
