--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -229,20 +229,24 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
         if (!is_paging(vcpu)) {
                 context->nx = false;
                 context->gva_to_gpa = nonpaging_gva_to_gpa;
+                // 没开启分页, 
                 context->root_level = 0;
         } else if (is_long_mode(vcpu)) {
                 context->nx = is_nx(vcpu);
+                // 64位: 5级页表/4级页表
                 context->root_level = is_la57_mode(vcpu) ?
                                 PT64_ROOT_5LEVEL : PT64_ROOT_4LEVEL;
                 reset_rsvds_bits_mask(vcpu, context);
                 context->gva_to_gpa = paging64_gva_to_gpa;
         } else if (is_pae(vcpu)) {
                 context->nx = is_nx(vcpu);
+                // 32位开启pae, 值为3: 3级页表
                 context->root_level = PT32E_ROOT_LEVEL;
                 reset_rsvds_bits_mask(vcpu, context);
                 context->gva_to_gpa = paging64_gva_to_gpa;
         } else {
                 context->nx = false;
+                // 32位非pae, 值为2: 2级页表
                 context->root_level = PT32_ROOT_LEVEL;
                 reset_rsvds_bits_mask(vcpu, context);
                 context->gva_to_gpa = paging32_gva_to_gpa;
@@ -255,7 +259,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 }
 ```
 
-所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`
+所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到
 
 # EPT寻址过程
 
@@ -300,7 +304,7 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
                         enable_vnmi &&
                         (exit_qualification & INTR_INFO_UNBLOCK_NMI))
                 vmcs_set_bits(GUEST_INTERRUPTIBILITY_INFO, GUEST_INTR_STATE_NMI);
-        // 虚拟机物理地址, GPA
+        // 获取正在执行的虚拟机物理地址, GPA, 这就是产生异常的GPA
         gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);
         trace_kvm_page_fault(gpa, exit_qualification);
 
