--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -118,28 +118,34 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 (5) **PTE**的`bits N-1:12`提供**4KB page frame基址**. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到**目标GPA值**(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
 
-这整个过程中, 任何一个环节都可能会发生**EPT violation**或**EPT misconfiguration**而导致**VM\-Exit发生**(见6.1.8)
+这整个过程中, **任何一个环节！！！** 都可能会发生**EPT violation**或**EPT misconfiguration**而导致**VM\-Exit发生**(见6.1.8)
 
 也可能由于**guest paging structure**而引发**guest产生\#PF异常**, 从而使**guest处理\#PF异常处理程序**或由于`#PF异常`**直接或间接导致VM\-exit**.
 
 举一反三, 我们可以得到:
 
-- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即**CR3寄存器**内的 **PDT 基址**需要进行GPA转换, PDE 内的 PT 基址需要进行 GPA 转换, 以及合成的 GPA 需要进行转换.
-- 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 3 次GPA转换. 即
+- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即
+  - **CR3寄存器**内的 **PDT 基址**需要进行GPA转换, 
+  - **PDE** 内的 **PT 基址**需要进行 GPA 转换, 
+  - 以及合成的 **GPA** 需要进行转换.
+- 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 **3 次GPA转换**(**没有CR3指向！！！**). 即
+  - PDPTE寄存器内的PDT基址需要进行GPA转换
+  - PDE内的PT基址需要进行GPA转换
+  - 以及合成的GPA需要进行转换
 
-在 PAE 分页模式下, guest 执行 MOV to CR3 指令**更新 CR3 寄存器**(也包括更新 CR0 或 CR4 寄存器某些控制位)引发对 **PDPTE 的加载**. 因此, 在加载 PDPTE 表项时也会进行 GPA 的转换.
+在 PAE 分页模式下, guest 执行 MOV to CR3 指令**更新 CR3 寄存器**(也包括更新 CR0 或 CR4 寄存器某些控制位)引发对 **PDPTE 的加载**. 因此, 在**加载 PDPTE 表项**时也会进行 GPA 的转换. (**尽管不用CR3直接指向了, 但是加载时候还是有！！！**)
 
 # 3. EPT页表结构
 
-EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构)的实现类似. VMX架构实现最高4级EPT页表结构, 分别是:
+EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构)的实现类似. **VMX架构**实现**最高4级EPT页表结构**, 分别是:
 
-(1) EPT PML4T(`EPT Page Map Level-4 Table`), 表项是EPT PML4E.
+(1) **EPT PML4T**(`EPT Page Map Level-4 Table`), 表项是EPT PML4E.
 
-(2) EPT PDPT(`EPT Page Directory Pointer Table`), 表项是EPT PDPTE.
+(2) **EPT PDPT**(`EPT Page Directory Pointer Table`), 表项是EPT PDPTE.
 
-(3) EPT PDT(`EPT Page Directory Table`), 表项是EPT PDE.
+(3) **EPT PDT**(`EPT Page Directory Table`), 表项是EPT PDE.
 
-(4) EPT PT(`EPT Page Table`), 表项是EPT PTE.
+(4) **EPT PT**(`EPT Page Table`), 表项是EPT PTE.
 
 软件可以查询`IA32_VMX_EPT_VPID_CAP`寄存器的bit 6来确定**是否支持4级页表结构**, 为1时EPT支持4级页表结构. 每个EPT页表大小是4KB, 每个EPT页表项为64位宽.
 
@@ -157,7 +163,7 @@ EPT支持三种页面(见 2.5.13)
 
 # 4. guest physical address
 
-
+每个GPA(guest-physical address)值为64位宽. 但是, 当前VMX架构实现最高48位有效的GPA值(`bits 47:0`)
 
 # 5. EPTP
 
