--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -216,7 +216,10 @@ guest physical address的`bits 63:48` 被忽略(见6.1.3). **GPA**转换到**HPA
 
 EPT violation 故障可以发生在下面 **GPA转换HPA！！！** 的环节. 
 
-
+- 访问的页面属于 `not-present`. XXX
+- 尝试进行读访问, 但目标页面没有可读权限. XXX
+- 尝试进行写访问, 但目标页面没有可写权限. XXX
+- 尝试执行代码时, 目标页面没有可执行权限. XXX
 
 ### 9.1.1. VM-exit记录信息
 
