--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -219,17 +219,17 @@ EPT violation 故障可以发生在下面 **GPA转换HPA！！！** 的环节.
 - 访问的页面属于 `not-present`. XXX
 - 尝试进行读访问, 但目标页面没有可读权限. XXX
 - 尝试进行写访问, 但目标页面没有可写权限. XXX
-- 尝试执行代码时, 目标页面没有可执行权限. XXX
+- 尝试执行代码时(即 fetch 代码), 目标页面没有可执行权限. XXX
 
 ### 9.1.1. VM-exit记录信息
 
-由 EPT violation 引发 VM-exit 时, exit qualification 字段记录 EPT violation 的明细信息(参见3.10.1.14节表3-32).
+由 **EPT violation** 引发 `VM-exit` 时, **exit qualification** 字段记录 EPT violation 的明细信息(参见3.10.1.14节表3-32).
 
 从 exit qualification 字段中, 我们可以得到下面GPA转换的相关信息.
 
-(1) 访问操作(access), bits 2:0 指示发生 EPT violation 时, guest进行什么访问操作.
+(1) **访问操作**(access), `bits 2:0` 指示发生 EPT violation 时, guest进行什么访问操作.
 
-(2) 访问权限(access rights), bits 5:3 指示该 guest-physical address具有什么访问权限.
+(2) **访问权限**(access rights), `bits 5:3` 指示该 `guest-physical address`具有什么访问权限.
 
 (3) EPT violation发生的位置.
 
