--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -345,13 +345,14 @@ int kvm_mmu_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u64 error_code,
                 return RET_PF_RETRY;
 
         r = RET_PF_INVALID;
-        // mmio 引起的
+        // mmio 引起的, 其实从上面的路径走不到这里, 而是从 handle_ept_misconfig()过来
+        // 关于 mmio , 见io部分
         if (unlikely(error_code & PFERR_RSVD_MASK)) {
                 r = handle_mmio_page_fault(vcpu, cr2_or_gpa, direct);
                 if (r == RET_PF_EMULATE)
                         goto emulate;
         }
-
+        // 处理内存访问异常
         if (r == RET_PF_INVALID) {
                 r = kvm_mmu_do_page_fault(vcpu, cr2_or_gpa,
                                           lower_32_bits(error_code), false);
